--- a/admin/src/main/resources/org/jboss/capedwarf/admin/index.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/index.vm
@@ -1,5 +1,5 @@
 <html>
 <head>
-    <meta http-equiv="Refresh" content="0; URL=datastore.jsf"/>
+    <meta http-equiv="Refresh" content="0; URL=/_ah/admin/datastore.vm"/>
 </head>
 </html>
