--- a/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
@@ -215,11 +215,12 @@
                         <li>
                             <a href="#">Datastore Indexes</a>
                         </li>
-                        <li class="active">
+##                        <li class="active">
+                        <li>
                             <a href="datastore.vm">Datastore Viewer</a>
                         </li>
                         <li>
-                            <a href="#">Datastore Statistics</a>
+                            <a href="datastoreStatistics.vm">Datastore Statistics</a>
                         </li>
                         <li>
                             <a href="#">Blob Viewer</a>
