--- a/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
@@ -215,7 +215,7 @@
                         <li>
                             <a href="#">Datastore Indexes</a>
                         </li>
-##                        <li class="active">
+                        <!--<li class="active">-->
                         <li>
                             <a href="datastore.vm">Datastore Viewer</a>
                         </li>
