Text search admin console

--- a/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
@@ -229,6 +229,9 @@
                             <a href="#">Prospective Search</a>
                         </li>
                         <li>
+                            <a href="search.vm">Text search</a>
+                        </li>
+                        <li>
                             <a href="#">Datastore Admin</a>
                         </li>
                     </ul>
