--- a/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
@@ -202,7 +202,7 @@
                             <a href="#">Cron Jobs</a>
                         </li>
                         <li>
-                            <a href="#">Task Queues</a>
+                            <a href="taskQueues.vm">Task Queues</a>
                         </li>
                         <li>
                             <a href="#">Quota Details</a>
