CAPEDWARF-105 No caped dwarf in non-root deployed app

--- a/admin/src/main/resources/org/jboss/capedwarf/admin/datastoreStatistics.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/datastoreStatistics.vm
@@ -1,4 +1,4 @@
-#include("/org/jboss/capedwarf/admin/header.vm")
+#parse("/org/jboss/capedwarf/admin/header.vm")
 
 <h2>Datastore statistics</h2>
 
@@ -69,4 +69,4 @@
 
 #end
 
-#include("/org/jboss/capedwarf/admin/footer.vm")
+#parse("/org/jboss/capedwarf/admin/footer.vm")
