--- a/admin/src/main/resources/org/jboss/capedwarf/admin/datastore.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/datastore.vm
@@ -1,4 +1,4 @@
-#include("/org/jboss/capedwarf/admin/header.vm")
+#parse("/org/jboss/capedwarf/admin/header.vm")
 
 <h2>Datastore viewer</h2>
 <form action="datastore.vm">
@@ -50,4 +50,4 @@
     </table>
 #end
 
-#include("/org/jboss/capedwarf/admin/footer.vm")
+#parse("/org/jboss/capedwarf/admin/footer.vm")
