--- a/admin/src/main/resources/org/jboss/capedwarf/admin/datastoreEntity.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/datastoreEntity.vm
@@ -1,4 +1,4 @@
-#include("/org/jboss/capedwarf/admin/header.vm")
+#parse("/org/jboss/capedwarf/admin/header.vm")
 
 <h2>Datastore entity: ${datastoreEntity.readableKey}</h2>
 
@@ -21,4 +21,4 @@ Key: ${datastoreEntity.key}
     </tbody>
 </table>
 
-#include("/org/jboss/capedwarf/admin/footer.vm")
+#parse("/org/jboss/capedwarf/admin/footer.vm")
