--- a/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
@@ -29,7 +29,7 @@
             margin: 0 0 25px 0;
             border-bottom: 1px solid #4a5d75;
             height: 55px;
-            background-image: url(/_ah/admin/res/capedwarf_logo_200px.gif);
+            background-image: url($contextPath/_ah/admin/res/capedwarf_logo_200px.gif);
             background-repeat: no-repeat;
         }
 
