--- a/admin/src/main/resources/org/jboss/capedwarf/admin/logs.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/logs.vm
@@ -1,4 +1,4 @@
-#include("/org/jboss/capedwarf/admin/header.vm")
+#parse("/org/jboss/capedwarf/admin/header.vm")
 
 <h2>Logs</h2>
 <form action="logs.vm">
@@ -51,4 +51,4 @@
     #end
 </div>
 
-#include("/org/jboss/capedwarf/admin/footer.vm")
+#parse("/org/jboss/capedwarf/admin/footer.vm")
