--- a/admin/src/main/resources/org/jboss/capedwarf/admin/search.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/search.vm
@@ -1,4 +1,4 @@
-#include("/org/jboss/capedwarf/admin/header.vm")
+#parse("/org/jboss/capedwarf/admin/header.vm")
 
 <h2>Text search</h2>
 <form action="search.vm">
@@ -30,4 +30,4 @@
     </table>
 #end
 
-#include("/org/jboss/capedwarf/admin/footer.vm")
+#parse("/org/jboss/capedwarf/admin/footer.vm")
