--- a/admin/src/main/resources/org/jboss/capedwarf/admin/logs.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/logs.vm
@@ -24,7 +24,7 @@
         <tr>
             <td colspan="3">
                 $timeFormatter.format($requestLog.endTimeUsec)
-                <strong>$requestLog.resource</strong>
+                <strong>$esc.html($requestLog.resource)</strong>
                 $requestLog.status
                 ${requestLog.pendingTimeUsec}ms
                 $sizeFormatter.format($requestLog.responseSize)
