Add modules view to admin console.

--- a/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
@@ -187,7 +187,7 @@
                             <a href="#">Dashboard</a>
                         </li>
                         <li>
-                            <a href="#">Instances</a>
+                            <a href="modules.vm" alt="Modules">Instances</a>
                         </li>
                         <li>
                             <a href="logs.vm">Logs</a>
