Add simple CRUD.

--- a/admin/src/main/resources/org/jboss/capedwarf/admin/datastore.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/datastore.vm
@@ -54,4 +54,8 @@
     </table>
 #end
 
+#if($datastoreViewer.key)
+Deleted entity: $datastoreViewer.key .
+#end
+
 #parse("/org/jboss/capedwarf/admin/footer.vm")
