--- a/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/header.vm
@@ -168,6 +168,15 @@
             background-color: #F22;
         }
 
+        .pagination > a {
+            padding: 3px;
+        }
+
+        .pagination > a.active {
+            font-weight: bold;
+            color: black;
+        }
+
     </style>
 </head>
 <body>
